my-apps/external/haos/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: haos
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "haos.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
          weight: 1
